# encrypted-note-manager-csc-group-13-A-project

409encryptednotemanger/: backendEndpoint.txt  package-lock.json  package.json  vercel.json
409encryptednotemanger/app/: globals.css  layout.tsx  page.tsx
409encryptednotemanger/app/notes/: page.tsx  test
409encryptednotemanger/components/auth/: SimpleAuth.tsx
409encryptednotemanger/components/notes/: DeleteConfirmDialog.tsx  LandingPage.tsx  NoteCard.tsx  NoteEditor.tsx  NotePage.tsx  NoteSkeleton.tsx  SearchFilterBar.tsx  SyncStatus.tsx
409encryptednotemanger/components/ui/: AnimatedBackground.tsx  EnhancedToast.tsx  ThemeToggle.tsx
409encryptednotemanger/services/: api.service.ts  encryption.service.ts  mock-api.service.ts  notes.service.ts
409encryptednotemanger/store/: useNotesStore.ts
encrypted-notes-backend/: Cargo.toml
encrypted-notes-backend/src/: encryption.rs  main.rs
